navbar overlapping fixed

--- a/frontEnd/src/allCss/fixture.css
+++ b/frontEnd/src/allCss/fixture.css
@@ -1,3 +1,3 @@
-.shopPage {
+.fixturePage {
     padding-top: 25px; 
 }
